Stub maze class

--- a/maze.html
+++ b/maze.html
@@ -25,6 +25,9 @@
 </head>
 <body>
 <script src="rokko/src/maze/Maze.js"></script>
-<script>main();</script>
+<script src="rokko/src/maze/MazeApp.js"></script>
+<script>
+    main();
+</script>
 </body>
 </html>
