--- a/maze.html
+++ b/maze.html
@@ -18,7 +18,7 @@
 
         canvas {
             display: block;
-            margin: 50px auto 0;
+            margin: 0 auto;
             background: #eee;
         }
     </style>
