--- a/map.html
+++ b/map.html
@@ -19,6 +19,7 @@
         canvas {
             display: block;
             margin: 50px auto;
+            border: 1px solid #fff;
         }
     </style>
 </head>
