--- a/app/js/app/map/Viewport_test.html
+++ b/app/js/app/map/Viewport_test.html
@@ -10,7 +10,7 @@ See the COPYING file for details.
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Closure Unit Tests - viewport</title>
     <script src="/lib/closure-library/closure/goog/base.js"></script>
-    <script src="/rokko/src/map/Map.js"></script>
+    <script src="/js/app/map/Map.js"></script>
     <script>
         goog.require("goog.testing.jsunit");
     </script>
