Fix closure tasks

--- a/app/map.html
+++ b/app/map.html
@@ -1,3 +1,7 @@
 <script src="/lib/closure-library/closure/goog/base.js"></script>
 <script src="/js/app/deps.js"></script>
 <script src="/js/app/main.js"></script>
+<script>
+main();
+</script>
+
